# IF-ROS

./: .gitignore  .gitmodules  LICENSE  README.md
inset_ros_msgs/: CMakeLists.txt  package.xml
inset_test_node/: CMakeLists.txt  package.xml
inset_test_node/include/: bag_reader.hpp  data_ros_utils.h
inset_test_node/launch/: cross.launch
inset_test_node/maps/Cross_section/1/: circle_r_1.5mm.bag
inset_test_node/maps/Cross_section/2/: Prismatic_1.5mm.bag
inset_test_node/maps/Cross_section/3/: Equilateral_triangle_1.5mm.bag
inset_test_node/maps/Cross_section/4/: hexagon_1mm.bag
inset_test_node/maps/Cross_section/5/: Heart_shaped_1.5mm.bag
inset_test_node/src/: test_inset.cpp
multi_main_controller/: CMakeLists.txt  package.xml
multi_main_controller/App/: takeoff.cpp
multi_main_controller/Experimental_scene/: Cross.ttt
multi_main_controller/include/loadController/: common_include.h  dataStructure.h  flightController.h  math.h  node.h
multi_main_controller/include/trajGenerator/: trajectory_generator_waypoint.h
multi_main_controller/src/loadController/: flightController.cpp  math.cpp
multi_main_controller/src/trajGenerator/: trajectory_generator_waypoint.cpp
waypoint_generator/src/: sample_waypoints.h  waypoint_generator.cpp
