<?xml version="1.0"?>
<package format="2">
  <name>inset_ros_msgs</name>
  <version>0.0.0</version>
  <description>The inset_ros_msgs package</description>
  <maintainer email="Zy3144976384@gmail.com">caodong</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_simple</build_depend>
  
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
