<?xml version="1.0"?>
<package format="2">
  <name>inset_test_node</name>
  <version>0.0.1</version>
  <description>The inset_test_node package</description>
  <maintainer email="3144976384@gmail.com">caodong</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_simple</build_depend>
  <build_depend>iris_distro</build_depend>

  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>inset_util</depend>
  <depend>waypoint_generator</depend>

</package>

