<?xml version="1.0"?>
<package format="2">
  <name>multi_main_controller</name>
  <version>0.0.0</version>
  <description>The multi_main_controller package</description>

  <maintainer email="Zy3144976384@gmail.com">caodong</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
